--- a/FakeXrmEasy.9/packages.config
+++ b/FakeXrmEasy.9/packages.config
@@ -1,38 +1,40 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="5.1.0" targetFramework="net462" />
-  <package id="FakeItEasy" version="7.3.1" targetFramework="net462" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Caching.Memory" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Http" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Options" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net462" />
-  <package id="Microsoft.Identity.Client" version="4.57.0" targetFramework="net462" />
-  <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.57.0" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.Abstractions" version="7.5.1" targetFramework="net462" />
-  <package id="Microsoft.PowerPlatform.Dataverse.Client" version="1.0.26" targetFramework="net462" />
+  <package id="Castle.Core" version="5.1.1" targetFramework="net462" />
+  <package id="FakeItEasy" version="8.3.0" targetFramework="net462" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="8.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="8.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration" version="8.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="8.0.2" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="8.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="8.0.2" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Http" version="8.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging" version="8.0.1" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="8.0.2" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Options" version="8.0.2" targetFramework="net462" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net462" />
+  <package id="Microsoft.Identity.Client" version="4.65.0" targetFramework="net462" />
+  <package id="Microsoft.Identity.Client.Extensions.Msal" version="4.65.0" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="8.1.2" targetFramework="net462" />
+  <package id="Microsoft.PowerPlatform.Dataverse.Client" version="1.1.32" targetFramework="net462" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.24" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net462" />
-  <package id="System.Diagnostics.DiagnosticSource" version="7.0.0" targetFramework="net462" />
+  <package id="System.Diagnostics.DiagnosticSource" version="8.0.1" targetFramework="net462" />
   <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net462" />
   <package id="System.Memory" version="4.5.5" targetFramework="net462" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net462" />
   <package id="System.Security.AccessControl" version="6.0.1" targetFramework="net462" />
-  <package id="System.Security.Cryptography.ProtectedData" version="4.5.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.ProtectedData" version="8.0.0" targetFramework="net462" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net462" />
-  <package id="System.Text.Encodings.Web" version="7.0.0" targetFramework="net462" />
-  <package id="System.Text.Json" version="7.0.0" targetFramework="net462" />
+  <package id="System.ServiceModel.Http" version="4.10.3" allowedVersions="[4.10.3]" targetFramework="net462" />
+  <package id="System.ServiceModel.Primitives" version="4.10.3" allowedVersions="[4.10.3]" targetFramework="net462" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net462" />
+  <package id="System.Text.Json" version="8.0.5" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
 </packages>
